Chanel/src/objects/Wishlist__c.object
<CustomObject>
    <description>The wishlist object</description>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>The Master detail to Account</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Wishlists</relationshipLabel>
        <relationshipName>Wishlists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Wishlist_Id__c</fullName>
        <description>External Wishlist Id</description>
        <externalId>true</externalId>
        <label>Wishlist Id</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Wishlist</label>
    <nameField>
        <label>Wishlist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wishlists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>